Fix horizontal scroll

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -31,7 +31,8 @@
   align-items: center;
   width: 1000px;
   height: 32px;
-  //   overflow-x: hidden;
+  overflow-x: auto;
+  White-space: nowrap;
   scroll-snap-type: mandatory;
   background-image: linear-gradient(90deg, #005b9e, #0082c6);
   //   display: block;
